...
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8101.14"/>
    </dependencies>
    <scenes>
        <!--UICatalog-->
        <scene sceneID="Nki-YV-4Qg">
            <objects>
                <splitViewController title="UICatalog" id="H1p-Uh-vWS" sceneMemberID="viewController">
                    <toolbarItems/>
                    <connections>
                        <segue destination="0Vj-0D-3tU" kind="relationship" relationship="detailViewController" id="CeT-pi-z8R"/>
                        <segue destination="1tt-iQ-LUe" kind="relationship" relationship="masterViewController" id="43f-hI-Xse"/>
                    </connections>
                </splitViewController>
...
                                        <rect key="frame" x="0.0" y="152" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="8mf-St-d7C" id="0ue-cA-ugf">
                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Buttons" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="IG2-PT-8SC">
                                                    <rect key="frame" x="15" y="6" width="57" height="19.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
